@@ -9,6 +9,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Networking: BGET# was broken on x86-32 and x86-64 (but not ARM), returning
   negative numbers if bit 7 was set. Thank you to BeeBS.ddns.net for their
   help with tracking this down.
+- BASIC: Fixed a bug importing Russell-format tokenised BASIC where tokens
+  were incorrectly decoded.
 - BASIC: RUN recursion limit removed, it's now implemented with a
   setjmp/longjmp.
 - BASIC: EVAL stops at unexpected input without error (like Acorn BASIC),
